--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -3,7 +3,7 @@ html, body {
 
     /*font-family: Calibri, serif;*/
     /*font-size: 14pt;*/
-    margin: 15px 0 0 0;
+    margin-top: 15px;
 }
 
 #mapcontainer {
@@ -17,17 +17,16 @@ html, body {
 }
 
 .leaflet-left {
-    left: 30%;
+    left: 20%;
 }
 
 #leftsidebar{
     height: 100%;
-    width: 30%;
-    opacity: 0.95;
+    width: 20%;
+    /*opacity: 0.95;*/
     /*top: 0;*/
     left: 0;
-    background-color: #000000;
-    background-image: linear-gradient(#000000, #000000 30%, #1C3436);
+    background-color: rgba(0, 0, 0, 0.37);
     position: absolute;
     z-index: 10;
     overflow-y: auto;
@@ -40,7 +39,7 @@ html, body {
     width: 6px;
     cursor: col-resize;
     position: absolute;
-    right: 0px;
+    right: 0;
 }
 
 #banner {
@@ -67,6 +66,14 @@ html, body {
 
 .sidebarContent {
     padding: 5px;
+}
+
+#leftsidebar h4 {
+    color: white;
+}
+
+#leftsidebar a {
+    text-decoration: underline;
 }
 
 
