Added lightbox for screenshots

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -133,7 +133,7 @@ html, body {
     border-bottom: none;
     border-top: none;
 }
-#popupContent img {
+.popup img {
     max-width: 100% !important;
 }
 
